# cascades

./: .gitignore  Architecture.md  Cargo.toml  Development.md  Makefile  README.md  config.toml
.github/workflows/: rust.yml  sidecar.yml
config/: display.toml  plugins.toml
config/plugins.d/: ferry.toml  river.toml  road.toml  trail.toml  weather.toml
docs/: admin-ui-design.md  deploying-on-raspberry-pi.md  design-configurable-data-sources.md  layout-composer-design.md  manual-testing.md  plugin-authoring.md  plugin-customization-design.md  test-cases.md  user-stories.md
docs/research/: architecture-comparison.md  cascades-extensibility-diagnosis.md  inker-architecture.md  stack-evaluation.md  target-architecture.md  trmnl-plugin-system.md
fonts/: LICENSE  fonts.json
scripts/: dev-server.sh  install.sh  pi-display-loop.py  uninstall.sh
scripts/systemd/: cascades-display.service  cascades-sidecar.service  cascades.service
src/: api.rs  compositor.rs  crypto.rs  fonts.rs  format.rs  jsonpath.rs  lib.rs  main.rs  presets.rs  visible_when.rs
src/asset_store/: mod.rs
src/config/: mod.rs
src/domain/: mod.rs
templates/: _base.css  admin.html  admin_plugin_editor.html  ferry_full.html.liquid  ferry_quadrant.html.jinja  river_full.html.liquid  river_quadrant.html.liquid  road_full.html.liquid  trail_full.html.liquid  weather_full.html.liquid  weather_half_horizontal.html.jinja  weather_half_horizontal.html.liquid
tests/: compositor_tests.rs  phase10_uploaded_fonts_tests.rs  phase5_style_tests.rs  phase6_assets_tests.rs  phase7_conditional_tests.rs  phase8_recovery_tests.rs  phase9_theming_tests.rs  render_pipeline_tests.rs  server_acceptance_tests.rs  template_visual_tests.rs
(+20 files in other folders)
