[package]
name = "cascades"
version = "0.1.0"
edition = "2024"
description = "Cascades trip-condition rendering pipeline"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
image = { version = "0.24", default-features = false, features = ["png"] }
ureq = { version = "2", features = ["json"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
minijinja = { version = "2", features = ["loader"] }
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.10.0"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
